// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AuctionsList default 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    className="MuiListSubheader-root MuiListSubheader-colorInherit MuiListSubheader-sticky AuctionsList-listHeader"
  >
    <div
      className="MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        className="MuiGrid-item"
      >
        Auctions
      </div>
      <div
        className="MuiGrid-item"
      >
        <div />
      </div>
    </div>
  </li>
  <hr
    className="MuiDivider-root"
  />
  <div
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Laborum cupiditate
      </span>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiListItemText-secondary"
      >
        by Kassulke.Alba
      </p>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
  <div
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Aut iure nemo
      </span>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiListItemText-secondary"
      >
        by Boyle.Darien
      </p>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
  <div
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Mollitia est et
      </span>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiListItemText-secondary"
      >
        by Ashton.Maggio
      </p>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
  <div
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Vel velit
      </span>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiListItemText-secondary"
      >
        by Merle_Reynolds
      </p>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
</ul>
`;

exports[`Storyshots AuctionsList loading 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    className="MuiListSubheader-root MuiListSubheader-colorInherit MuiListSubheader-sticky AuctionsList-listHeader"
  >
    <div
      className="MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        className="MuiGrid-item"
      >
        Auctions
      </div>
      <div
        className="MuiGrid-item"
      >
        <div />
      </div>
    </div>
  </li>
  <hr
    className="MuiDivider-root"
  />
  <div
    className="MuiGrid-container MuiGrid-justify-xs-center"
  >
    <div
      className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg"
        viewBox="0 0 50 50"
      >
        <circle
          className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx={25}
          cy={25}
          fill="none"
          r={20}
          strokeWidth={3.6}
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</ul>
`;

exports[`Storyshots AuctionsList no auctions 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    className="MuiListSubheader-root MuiListSubheader-colorInherit MuiListSubheader-sticky AuctionsList-listHeader"
  >
    <div
      className="MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        className="MuiGrid-item"
      >
        Auctions
      </div>
      <div
        className="MuiGrid-item"
      >
        <div />
      </div>
    </div>
  </li>
  <hr
    className="MuiDivider-root"
  />
  <li
    className="MuiListItem-root MuiListItem-default MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="MuiListItemText-root AuctionsList-emptyListItemText"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        No auctions available
      </span>
    </div>
  </li>
</ul>
`;
